Correction image intro

--- a/documents/rapport/main.tex
+++ b/documents/rapport/main.tex
@@ -95,7 +95,8 @@ Boris \textsc{Mansencal}
 \addcontentsline{toc}{chapter}{Introduction}
 \setcounter{chapter}{1}
 
-L'objectif de ce projet est de générer le terrain \ref{fig:terrain}
+L'objectif de ce projet est de générer le terrain (voir
+figure\ref{fig:terrain})
 d'une planète procéduralement et de l'afficher à l'écran.
 
 \begin{figure}[!h]
