Description de CDLOD

--- a/documents/rapport/biblio.bib
+++ b/documents/rapport/biblio.bib
@@ -95,3 +95,11 @@ eprint = {
   organization={IEEE Computer Society Press}
 }
 
+@misc{EvoGPU,
+	HOWPUBLISHED = "\url{http://www.nvidia.com/content/gtc-2010/pdfs/2275_gtc2010.pdf}",
+	AUTHOR = "Ian Buck, San Jose",
+	TITLE = "The Evolution of GPUs for General Purpose Computing",
+	YEAR = "2010",
+	NOTE = "Accédé en Janvier 2018"
+}
+
