Biblio +Cube2Sphere +WorldGenerator

--- a/documents/rapport/biblio.bib
+++ b/documents/rapport/biblio.bib
@@ -95,3 +95,27 @@ eprint = {
   organization={IEEE Computer Society Press}
 }
 
+@inproceedings{Sphere,
+  title={Rendering and managing spherical data with sphere quadtrees},
+  author={Fekete, Gy{\"o}rgy},
+  booktitle={Proceedings of the 1st Conference on Visualization'90},
+  pages={176--186},
+  year={1990},
+  organization={IEEE Computer Society Press}
+}
+
+@misc{WorldGenerator,
+	HOWPUBLISHED = "\url{http://leifnode.com/2014/04/planetary-scale-lod-terrain-generation/}",
+	AUTHOR = "Leif Erkenbrach",
+	TITLE = "World-Generator",
+	YEAR = "2014",
+	NOTE = "Accédé en Janvier 2018"
+}
+
+@misc{Cube2Sphere,
+	HOWPUBLISHED = "\url{http://mathproofs.blogspot.fr/2005/07/mapping-cube-to-sphere.html}",
+	AUTHOR = "Leif Erkenbrach",
+	TITLE = "World-Generator",
+	YEAR = "2014",
+	NOTE = "Accédé en Janvier 2018"
+}
