Documentation et règle de codage

--- a/documents/rapport/main.tex
+++ b/documents/rapport/main.tex
@@ -193,7 +193,7 @@ il utilise la bibliothèque graphique DirectX. Il est uniquement compatible
 avec windows et ne peut pas être utilisé tel quel dans notre projet.
 Pour être compatible avec le système d'explotation cible, il est nécessaire 
 d'utiliser la bibliothque graphique OpenGl à la place. De plus, les 
-algorithmes utilisé comme base par \citep{CDLOD} sont implémentés sur \emph{GPU}.
+algorithmes utilisé comme base par \cite{CDLOD} sont implémentés sur \emph{GPU}.
 Une autre approche serait de mettre à jour des zones entière de terrain,
 comme détaillé par \cite{MassiveTerrain}. Cet algorithme ne permet pas
 de garder un nombre constant de triangles affichés par le fait qu'ils
@@ -380,10 +380,13 @@ de \cite{CDLOD} sur du matériel à faible capacité de calcul (NVIDIA Ion)
 nous permettent de supposer que notre implémentation atteindra les 60
 images par seconde.
 
-\subsection{Documentations}
+\newpage
 
-Documenter les interfaces du projets ainsi que les implémentations, en
-anglais.\\
+\subsection{Documentation et règles de codage}
+
+Les interfaces et implémentations du projet devront et seront documentées en anglais. Des règles de codage seront respectées pour l'intégralité du projet afin de faciliter la maintenance du code et éviter les erreurs de programmation.
+
+
 
 \subsection{Tests}
 
