--- a/documents/rapport/biblio.bib
+++ b/documents/rapport/biblio.bib
@@ -8,10 +8,10 @@ pages = {57-74},
 year  = {2009},
 publisher = {Taylor & Francis},
 doi = {10.1080/2151237X.2009.10129287},
-URL = { 
+URL = {
         https://doi.org/10.1080/2151237X.2009.10129287
 },
-eprint = { 
+eprint = {
         https://doi.org/10.1080/2151237X.2009.10129287
 }
 }
@@ -128,3 +128,10 @@ eprint = {
 	NOTE = "Accédé en Janvier 2018"
 }
 
+@misc{Simplexnoise,
+	HOWPUBLISHED = "\url{http://weber.itn.liu.se/~stegu/simplexnoise/simplexnoise.pdf}",
+	AUTHOR = "Stefan Gustavson",
+	TITLE = "Simplex noise demystified",
+	YEAR = "2005",
+	NOTE = "Accédé en Janvier 2018"
+}
