Gen terrain expl bruit

--- a/documents/rapport/main.tex
+++ b/documents/rapport/main.tex
@@ -267,17 +267,18 @@ algorithmes. Nous estimons la durée d'implémentation à trois semaines.\\
 \subsection{Génération de terrain}
 
 
-Générer aléatoirement la carte de hauteur d'un terrain.
-La génération se fera à partir d'un algorithme de bruit de perlin déjà
-implémenté dans une dépendance, par exemple \cite{libnoise}. Ce type
-d'algorithme est souvent utilisé dans le cadre de génération
-procédurale pour sa simplicité.\\
-Pour former la sphère, il suffit de construire un cube cadrillé et de le
-déformer en sphère, par exemple en utilisant les formules de
-\cite{Cube2Sphere}. Cette technique est adaptable à notre projet, car
-c'est celle utilisée dans \cite{WorldGenerator}. Elle permet de garder
-des découpages carrés, ce qui simplifie les opérations dans le
-quadtree.\\
+Générer aléatoirement la carte de hauteur d'un terrain.  La génération
+se fera à partir d'un algorithme d'un bruit Simplex 3D déjà implémenté
+dans une dépendance, par exemple \cite{libnoise}. Ce type d'algorithme
+est souvent utilisé dans le cadre de génération procédurale pour son
+efficacité. Plusieurs algorithmes de bruits sont disponibles, cependant
+le bruit Simplex est plus performant dans un nombre plus elevé de
+dimensions \cite{Simplexnoise}.  Pour former la sphère, il suffit de
+construire un cube cadrillé et de le déformer en sphère, en utilisant
+les formules de \cite{Cube2Sphere}. Cette technique est adaptable à
+notre projet, car c'est celle utilisée dans \cite{WorldGenerator}. Elle
+permet de garder des découpages carrés, ce qui simplifie les opérations
+dans le quadtree.\\
 
 Priorité moyenne, le terrain généré est nécessaire aux tests de
 l'interface graphique et des algorithmes, mais n'est pas requis pour
