Correction bug _ dans biblio

--- a/documents/rapport/main.tex
+++ b/documents/rapport/main.tex
@@ -5,6 +5,8 @@
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[colorinlistoftodos]{todonotes}
+\usepackage[strings]{underscore}
+\usepackage{url}
 
 \begin{document}
 
