--- a/documents/rapport/biblio.bib
+++ b/documents/rapport/biblio.bib
@@ -121,7 +121,8 @@ eprint = {
 }
 
 @misc{EvoGPU,
-	HOWPUBLISHED = "\url{http://www.nvidia.com/content/gtc-2010/pdfs/2275_gtc2010.pdf}",
+	HOWPUBLISHED =
+          "\url{http://www.nvidia.com/content/gtc-2010/pdfs/2275_gtc2010.pdf}",
 	AUTHOR = "Ian Buck, San Jose",
 	TITLE = "The Evolution of GPUs for General Purpose Computing",
 	YEAR = "2010",
