--- a/documents/rapport/biblio.bib
+++ b/documents/rapport/biblio.bib
@@ -136,3 +136,13 @@ eprint = {
 	YEAR = "2005",
 	NOTE = "Accédé en Janvier 2018"
 }
+
+@misc{Terragen,
+	HOWPUBLISHED = "\url{http://planetside.co.uk/}",
+	NOTE = "Accédé en Janvier 2018"
+}
+
+@misc{EliteDangerous,
+	HOWPUBLISHED = "\url{https://www.elitedangerous.com/}",
+	NOTE = "Accédé en Janvier 2018"
+}
